force-app/main/default/objects/Relaci_n_Municipio_Consesionario__c/Relaci_n_Municipio_Consesionario__c.object-meta.xml
<CustomObject>
    <description>Objeto de relación entre los objetos Municipio y Concesionario/Vitrina</description>
    <label>Relación Municipio/Concesionario</label>
    <nameField>
        <displayFormat>MC-{00000}</displayFormat>
        <label>Relación Municipio/Consesionario Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Relación Municipios/Concesionarios</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>