force-app/main/default/objects/Relaci_n_Municipio_Consesionario__c/fields/Agencia__c.field-meta.xml
<CustomField>
    <fullName>Agencia__c</fullName>
    <label>Agencia</label>
    <length>100</length>
    <type>Text</type>
</CustomField>