force-app/main/default/objects/Relaci_n_Municipio_Consesionario__c/fields/Autos__c.field-meta.xml
<CustomField>
    <fullName>Autos__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Autos</label>
    <type>Checkbox</type>
</CustomField>