force-app/main/default/objects/Relaci_n_Municipio_Consesionario__c/fields/Concesionario_Vitrina__c.field-meta.xml
<CustomField>
    <fullName>Concesionario_Vitrina__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Concesionario / Vitrina</label>
    <referenceTo>Concesionario__c</referenceTo>
    <relationshipLabel>Relación Municipios/Concesionarios</relationshipLabel>
    <relationshipName>Relaci_n_Municipios_Concesionarios</relationshipName>
    <type>Lookup</type>
</CustomField>