force-app/main/default/objects/Relaci_n_Municipio_Consesionario__c/fields/Concesionario_VitrinaTexto__c.field-meta.xml
<CustomField>
    <fullName>Concesionario_VitrinaTexto__c</fullName>
    <label>Concesionario / Vitrina</label>
    <length>100</length>
    <type>Text</type>
</CustomField>