force-app/main/default/objects/Relaci_n_Municipio_Consesionario__c/fields/Motos__c.field-meta.xml
<CustomField>
    <fullName>Motos__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Motos</label>
    <type>Checkbox</type>
</CustomField>