force-app/main/default/objects/Relaci_n_Municipio_Consesionario__c/fields/Municipio__c.field-meta.xml
<CustomField>
    <fullName>Municipio__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Municipio</label>
    <referenceTo>AM_Municipio__c</referenceTo>
    <relationshipLabel>Relación Municipios/Concesionarios</relationshipLabel>
    <relationshipName>Relaci_n_Municipios_Concesionarios</relationshipName>
    <type>Lookup</type>
</CustomField>